deployments/ocp-service-red.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: red
    app.kubernetes.io/component: red
    app.kubernetes.io/instance: red
  name: red
  namespace: customer-bluegreen
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: red
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
