deployments/route-bluegreen.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
  labels:
    app: blue
  name: bluegreen
  namespace: customer-bluegreen
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: green
